<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutCardDetailAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/appBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/cardDet_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/popUpOverlay"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutCardDetailAct">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/colorAccSec"
                android:layout_margin="10dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/cardDetName_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_name"
                    android:minWidth="400dp"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    tools:text="@string/card_name" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="5dp"
                    android:text="@string/label_colour"
                    android:textColor="@color/colorAccSec" />

                <TextView
                    android:id="@+id/labelCol_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/select_a_colour"
                    android:padding="5dp"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="5dp"
                    android:text="@string/members"
                    android:textColor="@color/colorAccSec" />

                <TextView
                    android:id="@+id/selectMemb_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/select_members"
                    android:padding="5dp"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/selectedMemb_rv"
                    android:padding="8dp"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="5dp"
                    android:text="@string/dueDate"
                    android:textColor="@color/colorAccSec" />

                <TextView
                    android:id="@+id/dueDate_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:hint="@string/select_due_date"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/updateCardB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:background="@drawable/button_bg_1"
                    android:text="@string/update"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>