<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/addList_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/add_list"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/addList_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="gone"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/cancelTaskListName_B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="5dp"
                    android:src="@drawable/ic_cancel" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/taskListName_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:autofillHints="@string/task_list_name"
                    android:hint="@string/task_list_name"
                    android:inputType="text"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/okTaskListName_B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="5dp"
                    android:src="@drawable/ic_add_task" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/taskItem_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/taskTitle_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/taskTitle_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/title"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/editTitle_B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="6dp"
                    android:src="@drawable/ic_edit" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/deleteTitle_B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="6dp"
                    android:src="@drawable/ic_delete" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@android:color/darker_gray" />

            <androidx.cardview.widget.CardView
                android:id="@+id/editTaskList_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/cancelEditTaskListName_B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:padding="5dp"
                        android:src="@drawable/ic_cancel" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editTaskListName_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:autofillHints="@string/task_list_name"
                        android:hint="@string/task_list_name"
                        android:inputType="text"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/okEditTaskListName_B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:padding="5dp"
                        android:src="@drawable/ic_add_task" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cardList_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardName_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/cancelCardName_B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:padding="5dp"
                        android:src="@drawable/ic_cancel" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/cardName_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:autofillHints="@string/task_list_name"
                        android:hint="@string/card_name"
                        android:inputType="text"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/okCardName_B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:padding="5dp"
                        android:src="@drawable/ic_add_task" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addCard_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/button_bg_2"
                android:text="@string/add_card"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>